# cppplayground

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  cppplayground.pem  shippable.yml
.github/workflows/: ccpp.yml
app/: CMakeLists.txt  admp_app  main.cpp
cmake/: googletest-download.cmake
include/common/: geometry.h
include/dummy/: dummy.h
scripts/: fix-clang-format.sh  fix-clang-tidy.sh  gen-doxy.sh  shell-lint.sh  test-all.sh  test-clang-format.sh  test-clang-tidy.sh  test-coverage.sh  test.sh
scripts/bits/: configure-cmake.sh  llvm-gcov.sh  run-clang-format.sh  run-clang-tidy.py  run-lcov.sh
src/dummy/: CMakeLists.txt  dummy.cpp
test/: CMakeLists.txt
test/src/dummy/: dummy_test.cpp
test/unittest/: unit_test_main.cpp
